add ignore dir
